--- a/player/index.html
+++ b/player/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="player">
-        <img class="cover">
+        <img id="player-cover">
     </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
