[feature] 兼容植入控制代码。

--- a/player/index.html
+++ b/player/index.html
@@ -12,6 +12,7 @@
 <body>
     <div id="player">
         <img id="player-cover">
+        <audio id="player-audio">
     </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
