[bugfix] 修正 duration bug 和 修改样式。

--- a/player/index.html
+++ b/player/index.html
@@ -10,6 +10,8 @@
     <style type="text/css">
     #player-cover {
         width: 100%;
+        margin: 0px;
+        padding: 0px;
     }
     #player-audio {
         opacity: 0;
