--- a/player/index.html
+++ b/player/index.html
@@ -8,10 +8,13 @@
     <meta name="viewport" content="width=device-width">
     <meta name="apple-mobile-web-app-capable" content="no"/>
     <style type="text/css">
-    #player-cover {
-        width: 100%;
+    * {
         margin: 0px;
         padding: 0px;
+    }
+    #player-cover {
+        width: 100%;
+        position: absolute;
     }
     #player-audio {
         opacity: 0;
