--- a/player/index.html
+++ b/player/index.html
@@ -12,6 +12,12 @@
         margin: 0px;
         padding: 0px;
     }
+    #player {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: url('default-cover.png') 50% 50% no-repeat;
+    }
     #player-cover {
         width: 100%;
         position: absolute;
@@ -24,7 +30,7 @@
 </head>
 <body>
     <div id="player">
-        <img id="player-cover">
+        <img id="player-cover" src="default-cover.png">
         <audio id="player-audio">
     </div>
 <script type="text/javascript">
