[bugfix] 对取 duration 和调用顺序进行了修正。

--- a/player/index.html
+++ b/player/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div id="player">
-        <img id="player-cover" src="default-cover.png">
+        <img id="player-cover">
         <audio id="player-audio">
     </div>
 <script type="text/javascript">
