--- a/player/index.html
+++ b/player/index.html
@@ -14,15 +14,16 @@
     }
     #player {
         width: 100%;
-        height: 100%;
+        height: 101%;
         position: absolute;
         background: url('default-cover.png') 50% 50% no-repeat;
     }
     #player-cover {
-        height: 100%;
+        height: 101%;
         width: 100%;
         position: absolute;
-        background: url('default-cover.png') 50% 50% no-repeat;
+        background: url('default-cover.png') 50% 0% no-repeat;
+        background-size: cover;
     }
     #player-audio {
         opacity: 0;
